@@ -1,5 +1,5 @@
 <?php
-// $Id: views_handler_filter_string.inc,v 1.8.4.4 2010-11-05 07:20:54 dereine Exp $
+// $Id: views_handler_filter_string.inc,v 1.8.4.5 2010-12-27 22:06:04 dereine Exp $
 
 /**
  * Basic textfield filter to handle string filtering commands
@@ -8,14 +8,6 @@
 class views_handler_filter_string extends views_handler_filter {
   // exposed filter options
   var $no_single = TRUE;
-
-  function option_definition() {
-    $options = parent::option_definition();
-
-    $options['case'] = array('default' => TRUE);
-
-    return $options;
-  }
 
   /**
    * This kind of construct makes it relatively easy for a child class
@@ -143,16 +135,6 @@ class views_handler_filter_string extends views_handler_filter {
     return $output;
   }
 
-  function options_form(&$form, &$form_state) {
-    parent::options_form($form, $form_state);
-    $form['case'] = array(
-      '#type' => 'checkbox',
-      '#title' => t('Case sensitive'),
-      '#default_value' => $this->options['case'],
-      '#description' => t('Case sensitive filters may be faster. MySQL might ignore case sensitivity.'),
-    );
-  }
-
   function operator_values($values = 1) {
     $options = array();
     foreach ($this->operators() as $id => $info) {
@@ -217,12 +199,7 @@ class views_handler_filter_string extends views_handler_filter {
   }
 
   function operator() {
-    if (!empty($this->options['case'])) {
-      return $this->operator;
-    }
-    else {
-      return $this->operator == '=' ? 'LIKE' : 'NOT LIKE';
-    }
+    return $this->operator == '=' ? 'LIKE' : 'NOT LIKE';
   }
 
   /**
@@ -247,10 +224,11 @@ class views_handler_filter_string extends views_handler_filter {
   }
 
   function op_contains($field) {
-    $this->query->add_where($this->options['group'], $field, "%$this->value%", 'LIKE');
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "$field LIKE $placeholder", array($placeholder => '%' . db_like($this->value) . '%'), 'formula');
   }
 
-  function op_word($field, $upper) {
+  function op_word($field) {
     $where = $this->operator == 'word' ? db_or() : db_and();
 
     preg_match_all('/ (-?)("[^"]+"|[^" ]+)/i', ' ' . $this->value, $matches, PREG_SET_ORDER);
@@ -280,35 +258,42 @@ class views_handler_filter_string extends views_handler_filter {
     }
     // previously this was a call_user_func_array but that's unnecessary
     // as views will unpack an array that is a single arg.
-    $this->query->add_where($this->options['group'], $where, $values);
+    $this->query->add_where($this->options['group'], $where, $values, 'formula');
   }
 
-  function op_starts($field, $upper) {
-    $this->query->add_where($this->options['group'], "$upper($field)", $this->value . '%', 'LIKE');
+  function op_starts($field) {
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "$field LIKE $placeholder", array($placeholder => db_like($this->value) . '%'), 'formula');
   }
 
-  function op_not_starts($field, $upper) {
-    $this->query->add_where($this->options['group'], "$upper($field)", $this->value . '%', 'NOT LIKE');
+  function op_not_starts($field) {
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "$field NOT LIKE $placeholder", array($placeholder => db_like($this->value) . '%'), 'formula');
   }
 
-  function op_ends($field, $upper) {
-    $this->query->add_where($this->options['group'], "$upper($field)", '%' . $this->value, 'LIKE');
+  function op_ends($field) {
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "$field LIKE $placeholder", array($placeholder => '%' . db_like($this->value)), 'formula');
   }
 
-  function op_not_ends($field, $upper) {
-    $this->query->add_where($this->options['group'], "$upper($field)", '%' . $this->value, 'NOT LIKE');
+  function op_not_ends($field) {
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "$field NOT LIKE $placeholder", array($placeholder => '%' . db_like($this->value)), 'formula');
   }
 
-  function op_not($field, $upper) {
-    $this->query->add_where($this->options['group'], "$upper($field)", '%' . $this->value . '%', 'NOT LIKE');
+  function op_not($field) {
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "$field NOT LIKE $placeholder", array($placeholder => '%' . db_like($this->value) . '%'), 'formula');
   }
 
-  function op_shorter($field, $upper) {
-    $this->query->add_where($this->options['group'], "LENGTH($upper($field))", $this->value, '<');
+  function op_shorter($field) {
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "LENGTH($field) < $placeholder", array($placeholder => $this->value), 'formula');
   }
 
-  function op_longer($field, $upper) {
-    $this->query->add_where($this->options['group'], "LENGTH($upper($field))", $this->value, '>');
+  function op_longer($field) {
+    $placeholder = $this->placeholder();
+    $this->query->add_where($this->options['group'], "LENGTH($field) > $placeholder", array($placeholder => $this->value), 'formula');
   }
 
   function op_empty($field) {
