@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.55 2010-12-26 23:24:07 dereine Exp $
+; $Id: views.info,v 1.7.6.56 2010-12-27 22:06:04 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -238,6 +238,7 @@ files[] = tests/handlers/views_handler_filter_date.test
 files[] = tests/handlers/views_handler_filter_equality.test
 files[] = tests/handlers/views_handler_filter_in_operator.test
 files[] = tests/handlers/views_handler_filter_numeric.test
+files[] = tests/handlers/views_handler_filter_string.test
 files[] = tests/handlers/views_handler_sort_random.test
 files[] = tests/handlers/views_handler_sort_date.test
 files[] = tests/handlers/views_handler_sort.test
